objects/tffa__ApplicationFact__c.object
<CustomObject>
    <description>Characteristics of an application, relevant for reporting and analytics. A subset of the actual information contained in an application. Comparable to a fact table in a star schema.</description>
    <fields>
        <fullName>tffa__AbandonedRoutingDecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of Routing Matrix when the application was in Abandoned status. Can be used for analysing the efficacy of the strategy during Champion/Challenger testing. e.g. does the new strategy involving new set of routing rules (based on new facts) yield better results.</description>
        <label>Abandoned Routing Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Abandoned Application Facts</relationshipLabel>
        <relationshipName>AbandonedApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Abandoned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the application was abandoned (status=ABANDONED). Useful in reporting. e.g. report conversion rate for abandoned Application(s).</description>
        <label>Abandoned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__AccountOpenedOn__c</fullName>
        <description>The date and time when the account was opened (in core) for the application.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account opened on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__AddOnServices__c</fullName>
        <description>List of selected add-on services.</description>
        <label>Add-on Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddOnServiceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Amount__c</fullName>
        <description>Captures certificate amount for certificate application and requested amount for lending application.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Application.</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Facts</relationshipLabel>
        <relationshipName>Facts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ApprovedOn__c</fullName>
        <description>The date and time of approval of the application.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__BrandEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current brand of the application</description>
        <label>Brand</label>
        <referenceTo>tffa__Brand__c</referenceTo>
        <relationshipLabel>ApplicationFacts</relationshipLabel>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Brand__c</fullName>
        <description>Brand code of the Brand for the application if applicable</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BundleCode__c</fullName>
        <description>Unique product bundle code maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bundle code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__BundleName__c</fullName>
        <description>Unique product bundle name maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bundle name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Bundle__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Bundle code identifier</description>
        <label>Bundle</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Product Bundle not valid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Bundled Applications Facts</relationshipLabel>
        <relationshipName>BundledApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Campaign__c</fullName>
        <description>The individual campaign name, slogan, promo code associated with the Submission.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CancellationReason__c</fullName>
        <description>Reason why the application was cancelled.</description>
        <label>Cancellation reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationCancellationReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CancelledBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who cancelled the application.</description>
        <label>Cancelled by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CancelledApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Channel__c</fullName>
        <description>Type of the channel from which the application has been originated.</description>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionOutcome__c</fullName>
        <description>Outcome of the Credit decisioning process.</description>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of related (Credit) Matrix. Can be used for analysing the efficacy of the strategy during Champion/Challenger testing. e.g. does the new strategy involving new set of rules (based on new facts) yield better results.</description>
        <label>Credit Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Credit Decisioned Application Facts</relationshipLabel>
        <relationshipName>CreditDecisionedApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__CrossChannel__c</fullName>
        <description>Indicates whether the application was submitted from a channel different from the originating channel.</description>
        <formula>TEXT(tffa__Channel__c) &lt;&gt; TEXT(tffa__SubmittedChannel__c)</formula>
        <label>Cross Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__CrossSellSourceProductCategory__c</fullName>
        <description>Denormalized category field of the cross sell source product.</description>
        <label>Cross sell source product category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CrossSellSourceProductCode__c</fullName>
        <description>Denormalized code field of the cross sell source product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cross sell source product code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CrossSellSourceProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to product that resulted in the cross sell application.</description>
        <label>Cross sell source product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Cross Sell Application Facts</relationshipLabel>
        <relationshipName>CrossSellApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__CrossSell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current application is due to cross-sell of product</description>
        <label>Cross sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__DeclinedReason__c</fullName>
        <description>Reason why the application was declined.</description>
        <label>Declined reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDeclinedReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DeviceBrowser__c</fullName>
        <description>The browser of the client creating the application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationCity__c</fullName>
        <description>The city of the device</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationContinent__c</fullName>
        <description>The continent where device located</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location Continent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationCountry__c</fullName>
        <description>The country where device located</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocationState__c</fullName>
        <description>The state (address) where the device resides.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device Location State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceLocation__c</fullName>
        <description>Specifies the precise geolocation of the device from which application was made. A device&apos;s IP can be used to derive this value within some degree of confidence.</description>
        <label>Device Location</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceOS__c</fullName>
        <description>The OS of the client creating the application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Device__c</fullName>
        <description>Identifier of the device from which application is created</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External identifier. Stores the identifier of the associated application.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialNeedFact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to financial need (fact) acting as the source of the recommendation that resulted in the application.</description>
        <label>Financial Need Fact</label>
        <referenceTo>tffa__FinancialNeedFact__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__FundedAmount__c</fullName>
        <description>Total amount funded for the account opened in the current application. This will be sum of all amounts from successfully completed funding requests.</description>
        <label>Funded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__FundingStatus__c</fullName>
        <description>Funding status of the application.</description>
        <label>Funding status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__FundingType__c</fullName>
        <description>Type of funding selected for the application.</description>
        <label>Funding type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FundingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if business type of product is selected</description>
        <label>Is Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the application contains multiple accounts. Each account is represented by an application term.</description>
        <label>Has multiple accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsLadder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the application contains multiple CD accounts for the purpose of laddering. Each account is represented by an application term.</description>
        <label>Is CD ladder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsLending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the product category belongs to lending</description>
        <label>Is Lending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsMultiProductSubmission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the application is part of a multi-product submission.</description>
        <label>Is multi-product submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOutcome__c</fullName>
        <description>Outcome of the KYC decisioning process.</description>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of related (KYC) Matrix. Can be used for analysing the efficacy of the strategy during Champion/Challenger testing. e.g. does the new strategy involving new set of rules (based on new facts) yield better results.</description>
        <label>KYC Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>KYC Decisioned Application Facts</relationshipLabel>
        <relationshipName>KYCDecisionedApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__LastSavedOn__c</fullName>
        <description>Date and time on which application was last saved as draft (status=SAVED).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Saved on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__LastSyncedOn__c</fullName>
        <description>The date and time of last synchronization with application record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last synced on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__LocationCode__c</fullName>
        <description>Denormalized code field of related Location (branch).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current geographical location of the application. This will be computed and be useful for regulations.</description>
        <label>Location</label>
        <referenceTo>tffa__Location__c</referenceTo>
        <relationshipLabel>ApplicationFacts</relationshipLabel>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Medium__c</fullName>
        <description>The advertising, marketing or traffic medium associated with the Submission.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfCustomers__c</fullName>
        <description>Number of existing customers in the application.</description>
        <formula>tffa__NumberOfParties__c - tffa__NumberOfProspects__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfIndividuals__c</fullName>
        <description>Number of parties of type INDIVIDUAL in the application.</description>
        <label>Individuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfOrganizations__c</fullName>
        <description>Number of parties of type ORGANIZATION in the application.</description>
        <label>Organizations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfParties__c</fullName>
        <description>Number of parties in the application.</description>
        <label>Parties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfProspects__c</fullName>
        <description>Number of prospects in the application. A prospect is a party who is not a customer of the bank.</description>
        <label>Prospects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfTerms__c</fullName>
        <description>Count of terms (or accounts) captured under the application.</description>
        <label>Number of Accounts / Terms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, useful for reporting</inlineHelpText>
        <label>Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OrganizationType__c</fullName>
        <description>Organization type of primary party.</description>
        <label>Organization type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OrganizationType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__OutOfSync__c</fullName>
        <description>Indicates if the record is out of sync with the application record.</description>
        <formula>ISNULL( tffa__LastSyncedOn__c )  || tffa__Application__r.LastModifiedDate  &gt;  tffa__LastSyncedOn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__PartyAge__c</fullName>
        <description>Age of the primary party (individual) in the application.</description>
        <label>Party age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartyCity__c</fullName>
        <description>City of the primary party in the application.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Party city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PartyCountry__c</fullName>
        <description>Country of the primary party in the application.</description>
        <label>Party country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyCreditBureauScore__c</fullName>
        <description>Score given by a credit bureau (e.g. Equifax, TransUnion) to the primary party. It is a reflection of the party&apos;s credit worthiness.</description>
        <label>Party Credit bureau score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartyDebitBureauScore__c</fullName>
        <description>Score given by a debit bureau (e.g. ChexSystems) to the primary party. e.g. QualiFile score. It is a reflection of the party&apos;s banking behavour.</description>
        <label>Party Debit Bureau score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartyFICOScore__c</fullName>
        <description>The FICO score of the primary party (individual) in the application.</description>
        <label>Party FICO score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__PartyGender__c</fullName>
        <description>Gender of the primary party (individual) in the application.</description>
        <label>Party gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyRole__c</fullName>
        <defaultValue>&quot;PROSPECT&quot;</defaultValue>
        <description>The role played by the primary party in the bank - CUSTOMER, PROSPECT.  This is different from applicant role which is specific to an application. Represents a fact.</description>
        <label>Party role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartySegment__c</fullName>
        <description>Captures different groups of people or organizations an enterprise aims to reach and serve. This field captures segment code. In case of multiple parties, segment of primary party is used.</description>
        <label>Party Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartySegment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__PartyState__c</fullName>
        <description>State (address) of the primary party in the application.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Party state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PartyTenure__c</fullName>
        <description>The tenure of the primary party (at the financial institution). Calculated as period in years since onboarding date.</description>
        <label>Party tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to primary party in the application.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Application Facts</relationshipLabel>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPurpose__c</fullName>
        <description>Primary purpose of the lending application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>Different product category supported by system. This classifies the flow of account opening, the underlying data model and the servicing components about an account.</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCode__c</fullName>
        <description>Denormalized code field of related Product.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product code identifier.</description>
        <label>Financial Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Application Facts</relationshipLabel>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__PromotionCode__c</fullName>
        <description>A promotion code which was part of a marketing campaign.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Promotion code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A promotion which was part of a marketing campaign that resulted in the application.</description>
        <label>Promotion</label>
        <referenceTo>tffa__Promotion__c</referenceTo>
        <relationshipLabel>Application Facts</relationshipLabel>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RateLockExpiryDate__c</fullName>
        <description>Expiry date of the rate lock validity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate lock expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__RateLockStatus__c</fullName>
        <description>Indicates the current status of rate lock request</description>
        <label>Rate lock status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RateLockStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RecommendationFact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to recommendation (fact) that resulted in the application.</description>
        <label>Recommendation Fact</label>
        <referenceTo>tffa__RecommendationFact__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ReferralCode__c</fullName>
        <description>The referral code that was applied on the submission.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral code (value)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The referral acting as the source of the application.</description>
        <label>Referral</label>
        <referenceTo>tffa__Referral__c</referenceTo>
        <relationshipLabel>Application Facts</relationshipLabel>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Reopened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the application was reopened. Useful in reporting.</description>
        <label>Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the application was in review (status=REVIEW). Useful in reporting. e.g. report conversion rate for review Application(s).</description>
        <label>Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source of the Submission. This could be Online banking, Walk-in, Promotion</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <defaultValue>&quot;Init&quot;</defaultValue>
        <description>The stage of the application in context of the product applied. This will be different for each product and is more granular than the status field.

This field will be updated on the state transition the application in the origination workflow.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Indicates current status of the application</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SubmissionId__c</fullName>
        <description>Denormalized id field of related submission. Used as a reference to the submission in the absence of the original record (generally purged).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submission id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SubmissionName__c</fullName>
        <description>Denormalized name field of related submission.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submission name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to related submission.</description>
        <label>Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Application Facts</relationshipLabel>
        <relationshipName>ApplicatioFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who submitted the application.</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApplicationFacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SubmittedChannel__c</fullName>
        <description>This will be same as created channel unless a different channel was used to submit the application.</description>
        <label>Submitted Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionChannelType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SubmittedOn__c</fullName>
        <description>The date and time when the related submission was submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the related submission was submitted(status=SUBMITTED).</description>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>